@@ -1,3 +1,8 @@
+Development Portal (2014-08-02 shi)
+==============================
+Fixed padding for tables
+
+
 Development Portal (2014-07-25 shi)
 ==============================
 Fixed table padding for more figures
